--- a/index.html
+++ b/index.html
@@ -30,6 +30,17 @@
             <h1 class="text-left">Where's My Music?</h1>
             <br>  <!-- -->
             <br>  <!-- -->
+
+    <!-- The Modal Div -->
+            <div id="modal" class="modal">
+
+                <!-- Modal content -->
+                <div class="modal-content">
+                    <span class="close">&times;</span>
+                    <p>No Concerts Found</p>
+                </div>
+
+            </div>
             
             
             <form>
